--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -182,7 +182,9 @@
                             <a class="dropdown-item" href="javascript: void(0)">Опыт: {{personage.experience}}</a>
                         </ul>
                         <button ng-disabled="personage.experience < 0" type="button"
-                                class="btn btn-success btn-sm margin-inline margin-top-10" ng-click="savePersonage()">Сохранить</button>
+                                class="btn btn-success btn-sm margin-inline margin-top-10" ng-click="savePersonage()">
+                            Сохранить
+                        </button>
                     </div>
                 </h3>
                 <div class="panel-body">
@@ -235,10 +237,9 @@
                                     style="cursor:pointer;">
                                     <div class="text-left disable-select">
                                         <i ng-hide="isShowItem(personageInherent.Inherent.id)"
-                                           class="icmn-circle-down2 margin-inline"></i>
-                                        <i ng-show="isShowItem(personageInherent.Inherent.id)"
-                                           class="icmn-circle-up2 margin-inline"></i>
-                                        {{personageInherent.Inherent.name}}
+                                           class="icmn-circle-down2 margin-inline"></i><i
+                                            ng-show="isShowItem(personageInherent.Inherent.id)"
+                                            class="icmn-circle-up2 margin-inline"></i>{{personageInherent.Inherent.name}}
                                     </div>
                                 </td>
                                 <td>
@@ -398,10 +399,9 @@
                                             style="cursor:pointer;">
                                             <div class="text-left disable-select">
                                                 <i ng-hide="isShowItem(personageAttribute.Attribute.id)"
-                                                   class="icmn-circle-down2 margin-inline"></i>
-                                                <i ng-show="isShowItem(personageAttribute.Attribute.id)"
-                                                   class="icmn-circle-up2 margin-inline"></i>
-                                                {{personageAttribute.Attribute.name}}
+                                                   class="icmn-circle-down2 margin-inline"></i><i
+                                                    ng-show="isShowItem(personageAttribute.Attribute.id)"
+                                                    class="icmn-circle-up2 margin-inline"></i>{{personageAttribute.Attribute.name}}
                                             </div>
                                         </td>
                                         <td>
@@ -775,13 +775,13 @@
                                 ng-hide="filteredAttachedSkills(item)"
                                 ng-class="addNotAddedClass(item.personageAttachedSkill)">
                                 <td class="text-right mobile attached"
-                                    ng-click="showHideDescription(item.attachedSkill)" style="cursor:pointer;width: 15%">
+                                    ng-click="showHideDescription(item.attachedSkill)"
+                                    style="cursor:pointer;width: 15%">
                                     <div class="text-left disable-select">
                                         <i ng-hide="isShowItem(item.attachedSkill.id)"
-                                           class="icmn-circle-down2 margin-inline"></i>
-                                        <i ng-show="isShowItem(item.attachedSkill.id)"
-                                           class="icmn-circle-up2 margin-inline"></i>
-                                        {{item.attachedSkill.name}}
+                                           class="icmn-circle-down2 margin-inline"></i><i
+                                            ng-show="isShowItem(item.attachedSkill.id)"
+                                            class="icmn-circle-up2 margin-inline"></i>{{item.attachedSkill.name}}
                                     </div>
                                 </td>
 
@@ -869,7 +869,8 @@
                                     <strong class="padding-left-10">Броски:</strong>
                                     <div ng-repeat="attachedSkillAttribute in item.attachedSkill.AttachedSkillAttributes">
                                         {{attachedSkillAttribute.description}}:
-                                        {{attachedSkillAttribute.Attribute.name}}+{{item.attachedSkill.name}}<span ng-show="getPersonageAttributeValue(item.personageAttachedSkill, attachedSkillAttribute.Attribute)">={{attributeValue+item.personageAttachedSkill.value}}
+                                        {{attachedSkillAttribute.Attribute.name}}+{{item.attachedSkill.name}}<span
+                                            ng-show="getPersonageAttributeValue(item.personageAttachedSkill, attachedSkillAttribute.Attribute)">={{attributeValue+item.personageAttachedSkill.value}}
                                     </span>
                                     </div>
                                 </td>
@@ -988,10 +989,9 @@
                                     style="cursor:pointer;">
                                     <div class="text-left disable-select">
                                         <i ng-hide="isShowItem(triggerSkillMixed.triggerSkill.id)"
-                                           class="icmn-circle-down2 margin-inline"></i>
-                                        <i ng-show="isShowItem(triggerSkillMixed.triggerSkill.id)"
-                                           class="icmn-circle-up2 margin-inline"></i>
-                                        {{triggerSkillMixed.triggerSkill.name}}
+                                           class="icmn-circle-down2 margin-inline"></i><i
+                                            ng-show="isShowItem(triggerSkillMixed.triggerSkill.id)"
+                                            class="icmn-circle-up2 margin-inline"></i>{{triggerSkillMixed.triggerSkill.name}}
                                     </div>
                                 </td>
 
@@ -1288,10 +1288,9 @@
                                     style="cursor:pointer;">
                                     <div class="text-left disable-select">
                                         <i ng-hide="isShowItem(meritMixed.merit.id)"
-                                           class="icmn-circle-down2 margin-inline"></i>
-                                        <i ng-show="isShowItem(meritMixed.merit.id)"
-                                           class="icmn-circle-up2 margin-inline"></i>
-                                        {{meritMixed.merit.name}}
+                                           class="icmn-circle-down2 margin-inline"></i><i
+                                            ng-show="isShowItem(meritMixed.merit.id)"
+                                            class="icmn-circle-up2 margin-inline"></i>{{meritMixed.merit.name}}
                                     </div>
                                 </td>
                                 <td class="text-right mobile merit">
@@ -1552,10 +1551,9 @@
                                     style="cursor:pointer;">
                                     <div class="text-left disable-select">
                                         <i ng-hide="isShowItem(flawMixed.flaw.id)"
-                                           class="icmn-circle-down2 margin-inline"></i>
-                                        <i ng-show="isShowItem(flawMixed.flaw.id)"
-                                           class="icmn-circle-up2 margin-inline"></i>
-                                        {{flawMixed.flaw.name}}
+                                           class="icmn-circle-down2 margin-inline"></i><i
+                                            ng-show="isShowItem(flawMixed.flaw.id)"
+                                            class="icmn-circle-up2 margin-inline"></i>{{flawMixed.flaw.name}}
                                     </div>
                                 </td>
 
@@ -1693,10 +1691,9 @@
                                         style="cursor:pointer;">
                                         <div class="text-left disable-select">
                                             <i ng-hide="isShowItem(spellItem.spell.id)"
-                                               class="icmn-circle-down2 margin-inline"></i>
-                                            <i ng-show="isShowItem(spellItem.spell.id)"
-                                               class="icmn-circle-up2 margin-inline"></i>
-                                            {{spellItem.spell.name}}
+                                               class="icmn-circle-down2 margin-inline"></i><i
+                                                ng-show="isShowItem(spellItem.spell.id)"
+                                                class="icmn-circle-up2 margin-inline"></i>{{spellItem.spell.name}}
                                         </div>
                                     </td>
 
@@ -1821,7 +1818,8 @@
                                style="margin-left: 10px; width: 95%; margin-top: 10px;">
                             <tr ng-repeat="notice in notices | orderBy:'-updatedAt' | filter: noticeSearch">
                                 <td>
-                                    <a class="link-underlined link-blue" ng-click="showNotice(notice)" style="cursor:pointer;">{{notice.name}}</a>
+                                    <a class="link-underlined link-blue" ng-click="showNotice(notice)"
+                                       style="cursor:pointer;">{{notice.name}}</a>
                                 </td>
                                 <td>
                                     <div ng-if="notice.experience > 0">
