--- a/public/views/attributes/attribute_manager.html
+++ b/public/views/attributes/attribute_manager.html
@@ -154,7 +154,7 @@
 
             <div class="panel">
                 <div class="panel-heading">
-                    <h3 class="display-inline margin-inline">Атрибуты <a ng-show="hasCreatePermission('Attribute')" href="#" class="link-underlined link-blue" ng-click="showAddDialog()">Добавить</a></h3>
+                    <h3 class="display-inline margin-inline">Атрибуты</h3>
                 </div>
                 <div class="panel-body">
 
