--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -258,6 +258,7 @@
                         </div>
                     </div>
                 </div>
+                <button class="btn" ng-click="addMagic()">add magic</button>
             </section>
         </div>
 
